# systemd

./: .gitignore  DISTRO_PORTING  Makefile-man.am  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.ac  meson.build  meson_options.txt  systemd_220.orig.tar.xz.delta  systemd_220.orig.tar.xz.id  systemd_221.orig.tar.xz.delta  systemd_221.orig.tar.xz.id  systemd_222.orig.tar.gz.delta  systemd_222.orig.tar.gz.id  systemd_223.orig.tar.gz.delta  systemd_223.orig.tar.gz.id  systemd_224.orig.tar.gz.delta  systemd_224.orig.tar.gz.id  systemd_225.orig.tar.gz.delta  systemd_225.orig.tar.gz.id  systemd_226.orig.tar.gz.delta  systemd_226.orig.tar.gz.id  systemd_227.orig.tar.gz.delta  systemd_227.orig.tar.gz.id  systemd_228.orig.tar.gz.delta  systemd_228.orig.tar.gz.id  systemd_229.orig.tar.gz.delta  systemd_229.orig.tar.gz.id  systemd_230.orig.tar.gz.delta  systemd_231.orig.tar.gz.delta  systemd_231.orig.tar.gz.id  systemd_232.orig.tar.gz.delta  systemd_233.orig.tar.gz.delta  systemd_233.orig.tar.gz.id  (+76 more)
debian/: changelog  control  gbp.conf  invoke-rc.d  libpam-systemd.systemd-logind.upstart  libsystemd-journal0.symbols  libsystemd-login0.symbols  logind.install  logind.upstart  rules  systemd-coredump.install  systemd-services.install  systemd-services.systemd-logind.upstart  systemd-timesyncd.install  systemd.install  systemd.links  systemd.postinst  systemd.prerm  systemd.upstart  udev-udeb.install  udev.install  udev.postinst  udev.postrm  udev.preinst
hwdb.d/: 60-keyboard.hwdb  60-sensor.hwdb
man/: daemon.7  (+267 more)
units/user/: meson.build
(+949 files in other folders)
